Fixed padding issue on mobile screens

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -352,9 +352,6 @@
 	.mobile-menu {
 		overflow-y: auto;
 	}
-	.mobile-menu i {
-		padding-right: 10px;
-	}
 	.main-menu {
 		padding-top: 15px;
 	}
